🔒 SECURITY FIX: Remove exposed Firebase keys and prevent future leaks
🚨 Critical Security Actions:
- Remove .env file from Git tracking (contained exposed Firebase API keys)
- Update .gitignore to prevent future .env commits
- Update .env.example with Firebase placeholders (removed Auth0)
- Add SECURITY_BREACH_ACTIONS.md with incident response guide

⚠️ URGENT: Firebase API keys were exposed in previous commit
- Keys need to be regenerated immediately in Firebase Console
- Project: e-commerce-web-app-53dd6
- Exposed keys: API key, project ID, sender ID, app ID

🛡️ Preventive Measures Added:
- Enhanced .gitignore with comprehensive environment file exclusions
- Template .env.example file with safe placeholder values
- Documentation of security incident and response actions

This commit secures the repository but the compromised Firebase keys still need manual regeneration.

--- a/fakestore-ecommerce/.env.example
+++ b/fakestore-ecommerce/.env.example
@@ -25,9 +25,13 @@ VITE_ENABLE_WISHLIST=false
 VITE_ENABLE_REVIEWS=false
 VITE_ENABLE_SEARCH=true
 
-# Authentication (Auth0) - Replace with your actual values
-VITE_AUTH0_DOMAIN=your-auth0-domain.us.auth0.com
-VITE_AUTH0_CLIENT_ID=your-client-id-here
+# Authentication (Firebase) - Replace with your actual values
+VITE_FIREBASE_API_KEY=your-firebase-api-key-here
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
 
 # Future Payment Integration (replace with your actual keys)
 # VITE_STRIPE_PUBLIC_KEY=pk_test_your_stripe_key_here
